--- a/Final-DIW/css/style.css
+++ b/Final-DIW/css/style.css
@@ -30,7 +30,7 @@ body {
 }
 
 section#home {
-	width: 1920px;
+	width: 100%;
 	height: 1080px;
 	background-image: url(../image/Home.jpg);
 }
@@ -105,7 +105,7 @@ header {
 
 section#about {
 	background-image: url(../image/About.jpg);
-	width: 1920px;
+	width: 100%;
 	height: 1080px;
 }
 
@@ -168,7 +168,7 @@ section#about {
 }
 
 section#portfolio {
-	width: 1920px;
+	width: 100%;
 	height: 1080px;
 	background-image: url(../image/Portfolio.jpg);
 }
@@ -211,7 +211,7 @@ section#portfolio {
 .text2 {
 	width: 485px;
 	height: 350px;
-	margin-left: 215px;
+	margin-left: 100px;
 	font-family: Montserrat;
 	line-height: 0px;
 }
@@ -261,7 +261,7 @@ section#portfolio {
 	width: 750px;
 	height: 350px;
 	float: left;
-	margin-left: 660px;
+	margin-left: 503px;
 	margin-top: -340px;
 }
 
@@ -284,7 +284,7 @@ section#portfolio {
 }
 
 section#contact {
-	width: 1920px;
+	width: 100%;
 	height: 1080px;
 	background-color: #dfdfdd;
 }
