--- a/Final-DIW/css/style.css
+++ b/Final-DIW/css/style.css
@@ -18,6 +18,9 @@
 body {
     margin: 0;
     padding: 0;
+	height: 7000px;
+	width: 100%;
+	overflow: hidden;
 }
 
 .container {
@@ -27,6 +30,7 @@ body {
 	margin: 0 auto;
 	overflow-y: scroll; 
     scroll-behavior: smooth;
+	background-repeat: no-repeat;
 }
 
 section#home {
@@ -54,7 +58,8 @@ header {
 .menu {
 	height: 150px;
 	width: 1420px;
-	float: right;
+	right: 10%;
+	position: fixed;
 }
 
 .menu ul {
@@ -350,7 +355,7 @@ section#contact {
 }
 
 .content4>p {
-	font-size: 20px;
+	font-size: 22px;
 	font-family: SanFrancisco;
 	width: 330px;
 	height: 180px;
@@ -364,7 +369,7 @@ section#contact {
 	border: thin;
 	border-radius: 35px;
 	font-family: SanFrancisco;
-	font-size: 15px;
+	font-size: 20px;
 	background-color: #dfdfdd;
 	border-style: outset;
 	border-color: black;
