--- a/Final-DIW/css/style.css
+++ b/Final-DIW/css/style.css
@@ -15,6 +15,10 @@
 	src:url(../font/MontserratAlternates-Light.otf);
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     padding: 0;
